# controllers/category.controllers.js
@@ -6,17 +6,12 @@ class CategoryControllers {
         this._categoryService = new CategoryService();
     }
 
-    categoryGet = async (req, res, next) => {
-        let response = await this._categoryService.CategoryGetById(req.params.id);
+    get = async (req, res, next) => {
+        let response = await this._categoryService.CategoryGet(req.query);
         return res.status(response.statusCode).json(response);
     }
 
-    categoryGetAll = async (req, res, next) => {
-        let response = await this._categoryService.CategoryGetAll();
-        return res.status(response.statusCode).json(response);
-    }
-
-    categorySave = async (req, res, next) => {
+    post = async (req, res, next) => {
         const requestModel = new CategorySaveModel(req.body._id, req.body.name, req.body.description);
         let response = await this._categoryService.CategorySave(requestModel);
         return res.status(response.statusCode).json(response);
