# controllers/user.controllers.js
@@ -1,5 +1,6 @@
 const UserRegisterModel = require('../models/exchanges/user/requestUserRegister');
 const UserLoginModel = require('../models/exchanges/user/requestUserLogin');
+const UserUpdateModel = require('../models/exchanges/user/requestUserUpdate');
 const UserService = require('../services/user.service');
 
 class UserControllers {
@@ -31,49 +32,16 @@ class UserControllers {
         return res.status(response.statusCode).json(response);
     }
 
-    // todo: get user address
+    userUpdate = async (req, res) => {
+        const requestModel = new UserUpdateModel(req.body.id, req.body.firstName, req.body.lastName, req.body.email, req.body.phoneNumber);
+        let response = await this._userService.UserUpdate(requestModel);
+        return res.status(response.statusCode).json(response);
+    }
+
     userAddressGet = async (req, res) => {
         let response = await this._userService.UserAddressGetByUserId(req.params.userId);
         return res.status(response.statusCode).json(response);
     }
-
-    // todo: update user
-    // todo: update user address
-    // todo: delete user address
-
-
 }
 
 module.exports = UserControllers;
-
-/*
-const _userService = new UserService();
-
-const userRegister = async (req, res, next) => {
-    const requestModel = new UserRegisterModel(req.body.username,
-        req.body.password, req.body.email,
-        req.body.firstName, req.body.lastName);
-    let response = await _userService.UserRegister(requestModel);
-    return res.status(response.statusCode).json(response);
-}
-
-
-const userLogin = async (req, res, next) => {
-    const requestModel = new UserLoginModel(req.body.email, req.body.password);
-    let response = await _userService.UserLogin(requestModel);
-    return res.status(response.statusCode).json(response);
-}
-
-
-const userGet = async (req, res) => {
-    let response = await _userService.UserGetById(req.params.id);
-    return res.status(response.statusCode).json(response);
-}
-
-module.exports = {
-    userRegister,
-    userLogin,
-    userGet
-};
-
-*/
